# awrust-cli

./: AGENTS.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish-homebrew.yml  release.yml
docs/: ARCHITECTURE.md  USAGE.md
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md  README.md
src/: client.rs  error.rs  main.rs
src/cmd/: mod.rs  s3.rs  status.rs
tests/: s3_bucket.rs  s3_object.rs  status.rs
tests/integration/: environment.py
tests/integration/features/: bucket.feature  object.feature  status.feature
tests/integration/steps/: bucket_steps.py  object_steps.py  status_steps.py
